welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: '(' expected but identifier found.
		if litMessage() == "R" {
                   ^BDRBuggle:9: error: '(' expected but identifier found.
		if litMessage() == "L" {
                   ^BDRBuggle:13: error: '(' expected but identifier found.
		if litMessage() == "I" {
                   ^BDRBuggle:18: error: '(' expected but identifier found.
		if litMessage() == "A" {
                   ^BDRBuggle:21: error: '(' expected but identifier found.
		if litMessage() == "B" {
                   ^BDRBuggle:25: error: '(' expected but identifier found.
		if litMessage() == "C" {
                   ^BDRBuggle:30: error: '(' expected but identifier found.
		if litMessage() == "Z" {
                   ^BDRBuggle:33: error: '(' expected but identifier found.
		if litMessage() == "Y" {
                   ^BDRBuggle:37: error: '(' expected but identifier found.
		if litMessage() == "X" {
                   ^BDRBuggle:42: error: illegal start of simple expression
	}
        ^